--- a/src/index.css
+++ b/src/index.css
@@ -58,8 +58,13 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
+  overflow-x: hidden;
 }
 
 h1,
